<resources>
    <string name="app_name">MinatKu</string>
    <string name="success_desc">Selamat Akun kamu sudah berhasil terdaftar. klik tombol kembali masuk untuk ke masuk ke halaman beranda.</string>
    <string name="success_main">Sukses Terdaftar</string>
    <string name="image_success">Image_Success</string>
    <string name="Masuk">Masuk</string>
    <string name="forg_main">Lupa Password?</string>
    <string name="forg_desc">Untuk mengatur ulang kata sandi, Anda memerlukan email atau nomor ponsel yang dapat diautentikasi.</string>
    <string name="check_main">Periksa Email Anda</string>
    <string name="check_desc">Kami telah mengirimkan pembaruan kata sandi ke alamat email Novallinohamid@gmail.com</string>
    <string name="email_check">Anda belum menerima email?  Kirim ulang</string>
    <string name="invalidEmail">Email Invalid</string>
    <string name="invalidPassword">"Password cannot be less than 8 characters"</string>
    <string name="nama">Nama</string>
    <string name="tanggal">Tanggal</string>
    <string name="post">Post</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="nomor_handpone">Nomor Handpone</string>
    <string name="tanggal_lahir">Tanggal Lahir</string>
    <string name="lokasi">Lokasi</string>
    <string name="email">Email</string>
    <string name="edit_profil">Edit Profil</string>
    <string name="detail_minat_dan_bakat">Detail Minat dan Bakat</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_telepon">No.Telepon</string>
    <string name="l_n">L/N</string>
    <string name="edit_foto_profil">Edit Foto Profil</string>
    <string name="masukkan_email">Masukkan Email</string>
    <string name="nomor_handphone">Nomor Handphone</string>
    <string name="simpan_perubahan">Simpan Perubahan</string>
    <string name="edit_foto">Edit Foto</string>
    <string name="minatku_siap_membantu_kamu_mengatasi_masalah_minat_dan_bakatmu">MinatKu siap membantu kamu mengatasi masalah minat dan bakatmu :)</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="masuk">MASUK</string>
    <string name="anda_belum_memiliki_akun">Anda Belum Memiliki Akun?</string>
    <string name="daftar"><u>Daftar</u></string>
    <string name="password">Password</string>
    <string name="minatku_text">Minatku Text</string>
    <string name="daftar_dulu_yuk">Daftar Dulu Yuk :)</string>
    <string name="edit_password">Edit Password</string>
    <string name="logout">Logout</string>
    <string name="simpan_sandi">Simpan Sandi</string>
    <string name="konfirmasi_kata_sandi">Konfirmasi Kata Sandi</string>
    <string name="kata_sandi_baru">Kata Sandi Baru</string>
    <string name="kata_sandi_lama">Kata Sandi Lama</string>
    <string name="ikuti_tes">Ikuti Tes</string>
    <string name="detail_join">Join Premium Kembangkan minat dan bakatmu</string>
    <string name="username">Username</string>
    <string name="hai">HAI :)</string>
    <string name="button_join">Join Now</string>
    <string name="lorem_ipsum">Lorem Ipsum</string>
    <string name="progress_text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor inciditincidunt</string>
    <string name="judul">Judul</string>
    <string name="description">Description</string>
    <string name="checklist">checklist</string>
    <string name="image_modul">Image Modul</string>
    <string name="title_modul">Modul Title</string>
    <string name="introduction">Introduction</string>
    <string name="backbutton">BackButton</string>
    <string name="home">Home</string>
    <string name="tagline">MinatKu siap membantu kamu mengatasi masalah minat dan bakatmu :)</string>
    <string name="minat_dan_bakatmu">Minat Dan Bakatmu</string>
    <string name="masukkan_kata">Masukkan kata</string>
    <string name="minatku">MinatKu</string>
    <string name="tombol_back">tombol back</string>
    <string name="coming_soon">COMING SOON</string>
    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="hasil_asesmen">TOP 5 Berdasarkan Hasil Assesment Kamu</string>
    <string name="question_text">Question Text</string>
    <string name="dislike">Dislike</string>
    <string name="enjoy">Enjoy</string>
    <string name="netral">Netral</string>
    <string name="next">Next</string>
    <string name="back">Back</string>
    <string name="finish">Finish</string>
    <string-array name="judul_dummy">
        <item>Informatika</item>
        <item>Matematika</item>
        <item>Fisika</item>
        <item>Sejarah</item>
        <item>Pendidikan</item>
    </string-array>
    <string-array name="desc_dummy">
        <item>Informatika Dasar</item>
        <item>Sejarah Matematika</item>
        <item>Pengertian Fisika</item>
        <item>Penjelasan Tentang Sejarah Dasar</item>
        <item>Mendidik Generasi Muda</item>
    </string-array>
    <string-array name="pict_dummy">
        <item>https://disdikbud.acehtengahkab.go.id/media/2023.04/informatika1.jpg</item>
        <item>https://cdnwpedutorenews.gramedia.net/wp-content/uploads/2021/09/17213900/cover-feature-mathematic.jpg</item>
        <item>https://mmc.tirto.id/image/otf/500x0/2022/11/28/istock-1218011126_ratio-16x9.jpg</item>
        <item>https://asset.kompas.com/crops/oClR1Sb2iB0_pWh0PxuVYP9kfb0=/0x6:627x424/750x500/data/photo/2021/04/05/606ab3fea3965.png</item>
        <item>https://almasoem.sch.id/wp-content/uploads/2021/12/IMG_2894-scaled.jpg</item>
    </string-array>
</resources>