<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.checkEmail.CheckMail">

    <ImageView
        android:id="@+id/suc_img"
        android:layout_width="244dp"
        android:layout_height="201dp"
        android:layout_marginTop="196dp"
        android:contentDescription="@string/image_success"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/people_phone_img" />

    <Button
        android:id="@+id/masuk"
        android:layout_width="317dp"
        android:layout_height="50dp"
        android:layout_marginTop="3dp"
        android:background="@drawable/rounded"
        android:text="@string/Masuk"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/suc_img" />

    <TextView
        android:id="@+id/TextMain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="104dp"
        android:fontFamily="@font/dmsans_18pt_bold"
        android:text="@string/check_main"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDesc"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_18pt_regular"
        android:text="@string/check_desc"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TextMain" />

    <TextView
        android:id="@+id/email_check"
        android:layout_width="314dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/dmsans_18pt_regular"
        android:text="@string/email_check"
        android:textAlignment="center"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/masuk"
        app:layout_constraintVertical_bias="0.049" />

</androidx.constraintlayout.widget.ConstraintLayout>