<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="8dp"
    app:cardUseCompatPadding="true"
    android:layout_marginHorizontal="8dp"
    app:cardElevation="2dp">

    <ProgressBar
        android:id="@+id/loadingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="280dp"
        android:background="#F9F9F9"
        android:padding="13dp">

        <ImageView
            android:id="@+id/modul_image"
            android:layout_width="0dp"
            android:layout_height="200dp"
            android:transitionName="profile"
            android:contentDescription="@string/image_modul"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toTopOf="@+id/modul_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/modul_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:transitionName="name"
            android:fontFamily="@font/dmsans_18pt_bold"
            android:text="@string/judul"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/modul_desc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modul_image" />

        <TextView
            android:id="@+id/modul_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/dmsans_18pt_regular"
            android:text="@string/description"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/modul_name" />

        <ImageView
            android:id="@+id/checklist"
            android:layout_width="45dp"
            android:layout_height="45dp"
            android:contentDescription="@string/checklist"
            android:scaleType="fitXY"
            android:src="@drawable/checklist"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.868"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.978" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>